PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_NPR_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_12Months_Actual_Sales_Unit__c</fullName>
        <inlineHelpText>Rollup of last 12 months quantity</inlineHelpText>
        <label>12Months Actual Sales Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_12Months_Net_Sales__c</fullName>
        <label>12Months Net Sales$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_12Months_Sales_Unit__c</fullName>
        <label>12Months Sales Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_12Mt_Sales_Ut_Actual__c</fullName>
        <inlineHelpText>12Mt Sales Ut Actual (Oct&apos;19 till Sept&apos;20)</inlineHelpText>
        <label>12Mt Sales Ut Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_ABS__c</fullName>
        <label>ABS%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_ABS_in__c</fullName>
        <label>ABS% in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Account__c</fullName>
        <label>Customer Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Add_ABS_Value__c</fullName>
        <label>Add ABS Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bonafied_G_N_Indicator__c</fullName>
        <label>Bonafied G/N Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_CD__c</fullName>
        <label>%CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_CD_in__c</fullName>
        <label>%CD in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CM_Fee__c</fullName>
        <label>CM Fee%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_CM_Fee_in__c</fullName>
        <label>CM Fee% in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CP_Units__c</fullName>
        <label>CP Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments_Section_1__c</fullName>
        <label>Comments (Section-1)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments_Section_2__c</fullName>
        <label>Comments (Section-2)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments_Section_3__c</fullName>
        <label>Comments (Section-3)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_External_Description__c</fullName>
        <label>Contract External Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Internal_Description__c</fullName>
        <label>Contract Internal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Link__c</fullName>
        <formula>IF(ISBLANK(  Phoenix_Contract__c ), &apos;&apos;, HYPERLINK(&quot;/&quot;+Phoenix_Contract__c ,  Phoenix_Contract_Name__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Name__c</fullName>
        <label>Contract Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Price__c</fullName>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contract__c</fullName>
        <label>Contract Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Bucket__c</fullName>
        <label>Customer Bucket</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Group__c</fullName>
        <label>Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Link__c</fullName>
        <formula>IF(ISBLANK( Phoenix_Account__c), &apos;&apos;, HYPERLINK(&quot;/&quot;+Phoenix_Account__c, Phoenix_Customer_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Date__c</fullName>
        <description>This field is used in NPR Snapshot batch</description>
        <label>Record Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dead_Net_High_GR__c</fullName>
        <label>Dead Net (High GR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dead_Net_Tracking_GR__c</fullName>
        <label>Dead Net(Tracking GR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Fee_Bonafied_Fee__c</fullName>
        <label>Fee% (Bonafied Fee)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Fee_in_Value__c</fullName>
        <label>Fee% in $ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_GR_HighTier_in__c</fullName>
        <label>GR (HighTier)% in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_GR_Rebate_High_Tier__c</fullName>
        <label>GR Rebate% (High Tier)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_GR_TrackingTier__c</fullName>
        <label>GR% (TrackingTier)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_GR_Tracking_in__c</fullName>
        <label>GR(Tracking)% in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indirect_Customers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indirect Customers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Market_Share__c</fullName>
        <label>Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Material_Number__c</fullName>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Month__c</fullName>
        <formula>CASE(MONTH( Phoenix_Date__c ),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot; &quot;)+&quot;-&quot; +RIGHT(TEXT(YEAR( Phoenix_Date__c  )) , LEN(TEXT(YEAR( Phoenix_Date__c  )))  - 2)</formula>
        <label>Record Processed Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_11__c</fullName>
        <label>NDC-11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Customer_Code__c</fullName>
        <label>NPR Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Customer_Name__c</fullName>
        <label>NPR Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPR Data</label>
        <referenceTo>Phoenix_NPR_Data__c</referenceTo>
        <relationshipLabel>NPR Snapshot</relationshipLabel>
        <relationshipName>NPR_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Snapshot_Ref__c</fullName>
        <label>NPR Snapshot Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Status__c</fullName>
        <label>NPR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_Fees_CD_HiGR__c</fullName>
        <label>Net Price-Fees-CD-HiGR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_Fees_CD__c</fullName>
        <label>Net Price-Fees-CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_for_GR_basis__c</fullName>
        <label>Net Price for GR basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_w_o_Fee_CD_HiGR__c</fullName>
        <label>Net Price w/o Fee-CD-HiGR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_w_o_Fees__c</fullName>
        <label>Net Price w/o Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_w_o_fee_CD__c</fullName>
        <label>Net Price w/o Fee-CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_with_Fees__c</fullName>
        <label>Net Price with Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Sales_90__c</fullName>
        <label>Net Sales$(90)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Sales_Internal__c</fullName>
        <formula>Phoenix_12Months_Sales_Unit__c  *  Phoenix_Dead_Net_Tracking_GR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Sales(Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Per_Unit_Bonfied_Fee__c</fullName>
        <label>Per Unit Bonfied Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Per_Unit_Rebate__c</fullName>
        <label>Per Unit Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Effective_Value_From__c</fullName>
        <label>Price Effective Value From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Effective_Value_To__c</fullName>
        <label>Price Effective Value To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Desc__c</fullName>
        <label>Product Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Hierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Link__c</fullName>
        <formula>IF(ISBLANK(  Phoenix_Product__c ), &apos;&apos;, HYPERLINK(&quot;/&quot;+Phoenix_Product__c,  Phoenix_Product_Name__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Position__c</fullName>
        <label>Product Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <label>Product Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_RDC_NLC__c</fullName>
        <label>RDC/NLC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_RDC_NLC_in__c</fullName>
        <label>RDC/NLC% in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate_G_N_Indicator__c</fullName>
        <label>Rebate G/N Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate__c</fullName>
        <label>Rebate%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate_in_Value__c</fullName>
        <label>Rebate % in $ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_SF_Product_Description__c</fullName>
        <label>SF Product Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SF_Product_Family__c</fullName>
        <label>SF Product Family</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SalesUnit_90__c</fullName>
        <label>Sales Unit (90)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_From_Date_for_last_90_Days__c</fullName>
        <label>Sales From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Tracking_Gr_last_12_months_Sales__c</fullName>
        <inlineHelpText>Sales with tracking Gr with last 12 months usage</inlineHelpText>
        <label>Tracking Gr with last 12 months Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_UPC_NDC10__c</fullName>
        <inlineHelpText>Universal Product Code / National Drug Code</inlineHelpText>
        <label>UPC / NDC-10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Description__c</fullName>
        <label>Vistex Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Product_Hierarchy__c</fullName>
        <label>Vistex Product Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Check__c</fullName>
        <label>WAC Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Units__c</fullName>
        <label>WAC Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC__c</fullName>
        <label>WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_ZD07_Off_InvCurrency__c</fullName>
        <label>ZD07% (Off Inv)$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_ZD07_Off_Inv__c</fullName>
        <label>ZD07% (Off Inv)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_ZITD_Value__c</fullName>
        <label>ZITD Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_tracking_Gr_annual_usage_Sales__c</fullName>
        <inlineHelpText>Sales with tracking Gr with annualized usage</inlineHelpText>
        <label>Tracking Gr with annualized usage Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>NPR Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_NPR_Data__c</columns>
        <columns>Phoenix_Contract_Type__c</columns>
        <columns>Phoenix_12Mt_Sales_Ut_Actual__c</columns>
        <columns>Phoenix_Date__c</columns>
        <columns>Phoenix_Price_Effective_Value_From__c</columns>
        <columns>Phoenix_GR_TrackingTier__c</columns>
        <columns>Phoenix_GR_Rebate_High_Tier__c</columns>
        <columns>Phoenix_NPR_Snapshot_Ref__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Date__c</field>
            <operation>equals</operation>
            <value>1/8/2020</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NPRSnapshot-{000000}</displayFormat>
        <label>NPR Snapshot No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPR Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>